--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/paypal-js": "^7.0.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
